--- a/m01/index.html
+++ b/m01/index.html
@@ -13,26 +13,26 @@
     <h3>Spaghetti Carbonara</h3>
     <figure>
         <a href="https://everylittlecrumb.com/pink-sauce-pasta/" target="_blank">
-            <img src="images/image1.jpg" alt="Pink souce pasta" style="width:100%; max-width:400px; border-radius: 10px;">
+            <img src="image1.jpg" alt="Pink souce pasta" style="width:100%; max-width:400px; border-radius: 10px;">
         </a>
         <figcaption>A delicious Italian pasta recipe made with tomato and cream sauce.</figcaption>
     </figure>
 
     <div style="display: flex; gap: 10px;">
         <a href="https://joyfoodsunshine.com/the-most-amazing-chocolate-chip-cookies/" target="_blank">
-            <img src="images/image2.jpg" alt="Chocolate Chip Cookie" style="width:100px; height:100px; border-radius: 10px;">
+            <img src="image2.jpg" alt="Chocolate Chip Cookie" style="width:100px; height:100px; border-radius: 10px;">
         </a>
         <a href="https://www.delish.com/cooking/recipe-ideas/a44763401/mac-and-cheese-recipe/" target="_blank">
-            <img src="images/image3.jpg" alt="Mac and Cheese" style="width:100px; height:100px; border-radius: 10px;">
+            <img src="image3.jpg" alt="Mac and Cheese" style="width:100px; height:100px; border-radius: 10px;">
         </a>
         <a href="https://www.delish.com/cooking/recipe-ideas/a24893663/homemade-pizza-recipe/" target="_blank">
-            <img src="images/image4.jpg" alt="Pizza" style="width:100px; height:100px; border-radius: 10px;">
+            <img src="image4.jpg" alt="Pizza" style="width:100px; height:100px; border-radius: 10px;">
         </a>
         <a href="https://www.thekitchn.com/tomato-soup-recipe-23678864" target="_blank">
-            <img src="images/image5.jpg" alt="Tomato soup" style="width:100px; height:100px; border-radius: 10px;">
+            <img src="image5.jpg" alt="Tomato soup" style="width:100px; height:100px; border-radius: 10px;">
         </a>
         <a href="https://www.allrecipes.com/recipe/45396/easy-pancakes/" target="_blank">
-            <img src="images/image6.jpg" alt="Pancakes" style="width:100px; height:100px; border-radius: 10px;">
+            <img src="image6.jpg" alt="Pancakes" style="width:100px; height:100px; border-radius: 10px;">
         </a>
     </div>
 
