--- a/m01/index.html
+++ b/m01/index.html
@@ -10,7 +10,7 @@
     <h2>Created by: Adi Amoyal</h2>
     <hr>
 
-    <h3>Spaghetti Carbonara</h3>
+    <h3>Pink Sauce Pasta</h3>
     <figure>
         <a href="https://everylittlecrumb.com/pink-sauce-pasta/" target="_blank">
             <img src="image1.jpg" alt="Pink souce pasta" style="width:100%; max-width:400px; border-radius: 10px;">
